--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="logo">logo</string>
+    <string name="title_activity_login_register">LoginRegisterActivity</string>
 
 </resources>
